# Polygon-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  allIncludes.hpp  convexHull.cpp  edgeChange.cpp  edgeChange.hpp  edgePointPair.cpp  edgePointPair.hpp  genericUtil.cpp  genericUtil.hpp  geoUtil.cpp  incremental.cpp  input.txt  localSearch.cpp  localSearch.hpp  main  main.cpp  mainFunctions.cpp  mainFunctions.hpp  mainFunctions2.cpp  mainFunctions2.hpp  mainUtil.cpp  mainUtil.hpp  main_new.cpp  main_old.cpp  output.txt  output2.txt  outputInfo.cpp  outputInfo.hpp  run.sh  runCases.cpp  runCases.hpp  runls.sh  runold.sh  runsa.sh  simulatedAnnealing.cpp  simulatedAnnealing.hpp  timeManager.cpp  (+5 more)
algorithms/: CMakeLists.txt  Makefile  convexHull.cpp  incremental.cpp  localSearch.cpp  simulatedAnnealing.cpp
include/: convexHull.hpp  edgeChange.hpp  edgePointPair.hpp  geoUtil.hpp  incremental.hpp  mainFunctions.hpp  mainFunctions2.hpp
modules/: CMakeLists.txt  Makefile  edgeChange.cpp  edgePointPair.cpp  genericUtil.cpp  geoUtil.cpp  mainFunctions2.cpp  timeManager.cpp  utility.cpp
